Memory profiling stage 1 completed. Now OperationContext, MessageContext are garbage collected. Before this fix, I could run only 1259 request before getting an OutofMemoryError. But now I successfully exceeded 6000 requests for the same service (I stopped at that point, but I think I can go beyond that also).
I have to make ServiceContext and SGContext garbage collectable. 

- removed unnecessary info logs of the logger.